--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mx-auto">
+        <div class="col-md-6 mx-auto text-center">
           <h1 class="mb-3">Profile Scroller</h1>
           <div id="imageDisplay"></div>
           <br>
